--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.support:support-v4:26.1.0'
+    compile 'com.android.support:cardview-v7:26.+'
     compile 'com.android.support:design:26.+'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
